<resources>
    <string name="app_name">training_manager</string>
    <string name="todo">TODO</string>
    <string name="text_who_we_are">
    Хто ми такі?
    </string>

    <string name="text_who_we_are_2">
    Ми команда Active Gear, яка допоможе тобі добитися твоїх спортивних цілей
    </string>
    <string name="woman">Жінка</string>
    <string name="man">Чоловік</string>
    <string name="select_gender">Виберіть свій пол</string>
    <string name="subtitle_for_gender">Виберіть одну з наведених відповідей нижче</string>
    <string name="logo">Логотип ActiveGear</string>
    <string name="some_id">#1</string>
    <string name="block_new">block</string>
    <string name="fire">fire</string>
    <string name="menu">menu</string>
    <string name="profile">Профіль</string>
    <string name="icon_profile">Іконка профілю</string>
    <string name="edit_profile">edit profile</string>
    <string name="title_activity_testact">testact</string>
    <string name="title_activity_dialog_start">DialogStartActivity</string>
</resources>