<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2720">

    <TextView
        android:id="@+id/some_id"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:gravity="center"
        android:text="#2"
        android:fontFamily="@font/jura_bold"
        android:textAppearance="@style/some_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/vector_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jura_bold"
        android:text="Як вас звати?"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jura"
        android:text="@string/subtitle_for_gender"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_subtitle"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        app:layout_constraintTop_toBottomOf="@id/barrier_subtitle"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ТЕКСТ ДЛЯ ВВОДУ"
        android:fontFamily="@font/jura"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"/>

    <View
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        android:id="@+id/rectangle_8"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/rectangle_11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageButton
        android:id="@+id/next_button_check_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-50dp"
        android:layout_marginEnd="-45dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"/>
</androidx.constraintlayout.widget.ConstraintLayout>