<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2720">

    <TextView
        android:id="@+id/some_id"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:gravity="center"
        android:text="#8"
        android:fontFamily="@font/jura_bold"
        android:textAppearance="@style/some_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/vector_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/jura_bold"
        android:text="Вкажіть вашу максимальну вагу у жимі лежачи  (кг)"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jura"
        android:text="@string/subtitle_for_gender"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_subtitle"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/next_button_benchpress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-50dp"
        android:layout_marginEnd="-45dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@+id/subtitle">

        <ImageButton
            android:id="@+id/button_top_benchpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/upbutton"
            />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/benchpress_picker"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:dividerPadding="10dp"
            app:np_dividerColor="#00FFFFFF"
            app:np_dividerDistance="20dp"
            app:np_dividerThickness="2dp"
            app:np_dividerType="underline"
            app:np_height="160dp"
            app:np_itemSpacing="-10dp"
            app:np_selectedTextColor="#ffffff"
            app:np_selectedTextSize="50dp"
            app:np_textColor="#CB9D9D9D"
            app:np_textSize="40dp"
            app:np_wheelItemCount="4"
            app:np_width="64dp" />

        <ImageButton
            android:id="@+id/button_bottom_benchpress"
            android:layout_width="wrap_content"
            android:background="@drawable/downbutton"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>