<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_bg"
        tools:ignore="MissingConstraints,NotSibling">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Пройдено "
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/jura_bold"/>
            <TextView
                android:id="@+id/kfjvbodif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="("
                android:textColor="#E2F560"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/jura_bold"/>
            <TextView
                android:id="@+id/progressNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50"
                android:textColor="#E2F560"
                android:textSize="18sp"
                android:fontFamily="@font/jura_bold"/>

            <TextView
                android:id="@+id/progressPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%)"
                android:textColor="#E2F560"
                android:textSize="18sp"
                android:fontFamily="@font/jura_bold"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:progressTint="#E2F560"
                android:progressBackgroundTint="@color/gray"
                android:thumb="@android:color/transparent"
                android:progressDrawable="@drawable/seekbar_track"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="start|center_vertical"
                android:translationX="0dp"
                android:background="@drawable/green_circle"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center_vertical"
                android:translationX="0dp"
                android:background="@drawable/green_circle"/>
        </FrameLayout>
    </LinearLayout>

    <!-- Блок профиля -->
    <LinearLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_bg"
        android:fontFamily="@font/jura_bold"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressContainer">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="134dp"
                android:layout_height="33dp"
                android:background="@drawable/rectangle_2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="-20dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/icon_profile"
                    android:src="@drawable/icon_person" />

                <TextView
                    android:id="@+id/profileTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-10dp"
                    android:fontFamily="@font/jura_bold"
                    android:text="@string/profile"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/editProfileIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/icon_edit"
                android:contentDescription="@string/edit_profile"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/jura_bold"
            android:text="Владислав"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <!-- Первый элемент: Вес -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp">

                    <!-- Число (значение) -->
                    <TextView
                        android:id="@+id/weight_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="85"
                        android:textColor="#C3FF00"
                        android:fontFamily="@font/jura_bold"
                        android:textSize="40sp" />

                    <!-- Единица измерения -->
                    <TextView
                        android:id="@+id/weight_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="kg"
                        android:textColor="@color/white"
                        android:fontFamily="@font/jura_bold"
                        android:textSize="20sp"
                        android:layout_marginStart="4dp"/>
                </LinearLayout>

                <!-- Второй элемент: Рост -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="4dp">

                    <!-- Число (значение) -->
                    <TextView
                        android:id="@+id/height_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="183"
                        android:textColor="#C3FF00"
                        android:fontFamily="@font/jura_bold"
                        android:textSize="40sp" />

                    <!-- Единица измерения -->
                    <TextView
                        android:id="@+id/height_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="cm"
                        android:textColor="@color/white"
                        android:fontFamily="@font/jura_bold"
                        android:textSize="20sp"
                        android:layout_marginStart="4dp"/>
                </LinearLayout>

                <!-- Третий элемент: Возраст -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Число (значение) -->
                    <TextView
                        android:id="@+id/age_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="17"
                        android:textColor="#C3FF00"
                        android:fontFamily="@font/jura_bold"
                        android:textSize="40sp" />

                    <!-- Единица измерения -->
                    <TextView
                        android:id="@+id/age_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="years"
                        android:textColor="@color/white"
                        android:fontFamily="@font/jura_bold"
                        android:textSize="20sp"
                        android:layout_marginStart="4dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/jura_bold"
                    android:text="Вага"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="bottom"/>

                <TextView
                    android:id="@+id/height_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/jura_bold"
                    android:text="Ріст"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="bottom"/>

                <TextView
                    android:id="@+id/age_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jura_bold"
                    android:layout_weight="1"
                    android:text="Вік"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="bottom"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>